# DjangoChessApi

./: .isort.cfg  .mypy.ini  .verchew.ini  LICENSE.md  Makefile  Procfile  Procfile.dev  README.md  circle.yml  pyproject.toml  pytest.ini  requirements.txt  scent.py
DjangoChessApi/Chess/: admin.py  all_views.py  consumers.py  forms.py  helpers.py  models.py  routing.py  urls.py  views.py
DjangoChessApi/Chess/migrations/: 0001_initial.py  0002_auto_20200802_1118.py  0003_auto_20200805_1812.py  0004_game.py  0005_auto_20200807_2340.py  0006_auto_20200809_0007.py  0007_auto_20200811_1822.py  0008_auto_20200814_1551.py  0009_auto_20200814_1553.py  0010_auto_20200817_1408.py  0011_gametype_visibility.py  0012_game_free_play.py
DjangoChessApi/Chess/static/css/: board.css  configuration.css  configure_board.css  create_game.css  game_type.css  header.css  history.css  piece_selection.css  play_game.css  registration.css
DjangoChessApi/Chess/templatetags/: get_item.py  index.py  times.py  times_reverse.py
DjangoChessApi/Chess/tests/: test_helpers.py  test_model_game.py  test_model_game_type.py  test_models.py  test_template_tags.py
DjangoChessApi/Chess/views/: GameListView.py  UserGameTypeListView.py  UserListView.py
DjangoChessApi/api/: serializers.py  urls.py  viewsets.py
DjangoChessApi/api/tests/: test_partial_update_configuration_data.py
DjangoChessApi/api/viewsets/: game_configuration.py  game_play.py  history.py
config/: asgi.py  urls.py
config/settings/: default.py  local.py  production.py  test.py
tests/system/: .env  Procfile  conftest.py  user.py
(+38 files in other folders)
