[tool.poetry]

name = "DjangoChessApi"
version = "0.0"
description = ""
authors = ["Theo Voss <you@yourdomain.com>"]

[tool.poetry.dependencies]

python = "^3.6.4"

# Django
django = "^3.0"
django-allauth = "*"
django-cors-headers = "*"
django-grappelli = "*"

# API
djangorestframework = "^3.7"
drf-nested-routers = "*"
drf-yasg = "*"

# Storage
dj-database-url = "0.4.2"
psycopg2-binary = "^2.6"
django-redis-cache = "*"

# Utilities
faker = "*"
minilog = "^1.6"

# Deployment
whitenoise = "^5.0.1"
gunicorn = "^20.0.4"
chess = {git = "https://github.com/theovoss/Chess", rev = "33f3af81a6782f2f8117d37311d7be7bd3072fc3"}
django-crispy-forms = "^1.9.2"

[tool.poetry.dev-dependencies]

# Formatting
isort = "4.3.21"
black = "19.10b0"

# Linters
pylint = "^2.4.3"
mypy = "^0.761"

# Testing
pytest = "^5.3.2"
pytest-django = "*"
pytest-describe = "^1.0"
pytest-expecter = "^2.0"
pytest-randomly = "*"
pytest-cov = "^2.8.0"
freezegun = "*"
coverage = "^5.0"
coveragespace = "^3.1.1"

# Tooling
django-livereload-server = "*"
honcho = "*"
splinter = "*"
fire = "*"
sniffer = "*"
pync = { version = "*", platform = "darwin" }
MacFSEvents = { version = "*", platform = "darwin" }

[tool.black]

target-version = ['py37']
skip-string-normalization = true
